# -Lang-Psi-Lang---A-Neuro-Symbolic-Esoteric-Language

./: Cargo.toml  Phase3-README.md  README.md
docs/: development-methodology.md  language-specification.md  runtime-system-specification.md  type-system-specification.md  ΨLang-Phase1-Research-Summary.md
docs/architecture/: core-concepts.md  design-principles.md  system-architecture-specification.md  technology-stack-analysis.md
docs/research/: esoteric-language-analysis.md  neuromorphic-computing-research.md
examples/: hello_neural.psi  learning_demo.psi  quantum_cognitive.psi
src/: ast.rs  codegen.rs  ecosystem.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  semantic.rs  stdlib.rs
src/ecosystem/: benchmarks.rs  community.rs  deployment.rs  documentation.rs  education.rs  examples.rs  gallery.rs  integrations.rs  migration.rs  packages.rs  templates.rs  tools.rs
src/runtime/: learning.rs  neural_models.rs
src/stdlib/: applications.rs  cognition.rs  core.rs  data.rs  hardware.rs  language.rs  learning.rs  patterns.rs  reinforcement.rs  signal.rs  tests.rs  vision.rs
tests/: integration_tests.rs
