[package]
name = "psilang"
version = "0.1.0"
edition = "2021"
authors = ["PsiLang Development Team"]
description = "ΨLang - A Neuro-Symbolic Esoteric Programming Language for Neuromorphic Computing"
license = "MIT"
keywords = ["neuromorphic", "spiking-neural-networks", "esoteric-language", "neural-compiler"]
categories = ["compilers", "science", "neuroscience"]

[dependencies]
# Core parsing and lexing
logos = "0.13"
# Error handling
thiserror = "1.0"
eyre = "0.6"
# Collections and data structures
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Math and scientific computing
nalgebra = "0.32"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Command line interface
clap = { version = "4.0", features = ["derive"] }
# Testing
proptest = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[workspace]
members = [
    "."
]